🖌️ Fix mobile-nav button spacing

--- a/src/containers/LoggedIn/LoggedIn.scss
+++ b/src/containers/LoggedIn/LoggedIn.scss
@@ -25,8 +25,6 @@
         background: none;
         font-family: inherit;
         color: $gray-000;
-
-        & + & { margin-left: 1em; }
     }
 
     @include media($on-mobile) {
